[gd_scene load_steps=5 format=3 uid="uid://randomuid"]

[ext_resource type="Script" uid="uid://dyk5jepj7kgw5" path="res://level/level_select.gd" id="1_levelselect"]
[ext_resource type="Texture2D" uid="uid://dqknp3pp23f8n" path="res://assets/icon/star.png" id="2_star"]
[ext_resource type="Texture2D" uid="uid://buppc7v6t26x2" path="res://assets/backgroud/backgroud.jpeg" id="2_uv041"]
[ext_resource type="Theme" uid="uid://r2ty6ekpfn7c" path="res://resources/default_button_theme.tres" id="3_theme"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_levelselect")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uv041")
expand_mode = 1
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "选择关卡"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -100.0
offset_right = 550.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_theme")
theme_override_constants/separation = 50
alignment = 1

[node name="Level1Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level1Button" type="Button" parent="HBoxContainer/Level1Container"]
layout_mode = 2
text = "关卡1"

[node name="Level1Stars" type="HBoxContainer" parent="HBoxContainer/Level1Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level1Container/Level1Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level1Container/Level1Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level1Container/Level1Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level2Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level2Button" type="Button" parent="HBoxContainer/Level2Container"]
layout_mode = 2
text = "关卡2"

[node name="Level2Stars" type="HBoxContainer" parent="HBoxContainer/Level2Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level2Container/Level2Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level2Container/Level2Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level2Container/Level2Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level3Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level3Button" type="Button" parent="HBoxContainer/Level3Container"]
layout_mode = 2
text = "关卡3"

[node name="Level3Stars" type="HBoxContainer" parent="HBoxContainer/Level3Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level3Container/Level3Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level3Container/Level3Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level3Container/Level3Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level4Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level4Button" type="Button" parent="HBoxContainer/Level4Container"]
layout_mode = 2
text = "关卡4"

[node name="Level4Stars" type="HBoxContainer" parent="HBoxContainer/Level4Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level4Container/Level4Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level4Container/Level4Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level4Container/Level4Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level5Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level5Button" type="Button" parent="HBoxContainer/Level5Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡5"

[node name="Level5Stars" type="HBoxContainer" parent="HBoxContainer/Level5Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level5Container/Level5Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level5Container/Level5Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level5Container/Level5Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level6Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level6Button" type="Button" parent="HBoxContainer/Level6Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡6"

[node name="Level6Stars" type="HBoxContainer" parent="HBoxContainer/Level6Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level6Container/Level6Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level6Container/Level6Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level6Container/Level6Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level7Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level7Button" type="Button" parent="HBoxContainer/Level7Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡7"

[node name="Level7Stars" type="HBoxContainer" parent="HBoxContainer/Level7Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level7Container/Level7Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level7Container/Level7Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level7Container/Level7Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level8Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level8Button" type="Button" parent="HBoxContainer/Level8Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡8"

[node name="Level8Stars" type="HBoxContainer" parent="HBoxContainer/Level8Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level8Container/Level8Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level8Container/Level8Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level8Container/Level8Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level9Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level9Button" type="Button" parent="HBoxContainer/Level9Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡9"

[node name="Level9Stars" type="HBoxContainer" parent="HBoxContainer/Level9Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level9Container/Level9Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level9Container/Level9Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level9Container/Level9Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level10Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level10Button" type="Button" parent="HBoxContainer/Level10Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡10"

[node name="Level10Stars" type="HBoxContainer" parent="HBoxContainer/Level10Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level10Container/Level10Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level10Container/Level10Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level10Container/Level10Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Level11Container" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Level11Button" type="Button" parent="HBoxContainer/Level11Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "关卡11"

[node name="Level11Stars" type="HBoxContainer" parent="HBoxContainer/Level11Container"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Star1" type="TextureRect" parent="HBoxContainer/Level11Container/Level11Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="HBoxContainer/Level11Container/Level11Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="HBoxContainer/Level11Container/Level11Stars"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_star")
expand_mode = 1
stretch_mode = 5

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "返回主菜单"

[connection signal="pressed" from="HBoxContainer/Level1Container/Level1Button" to="." method="_on_level1_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level2Container/Level2Button" to="." method="_on_level2_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level3Container/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level4Container/Level4Button" to="." method="_on_level4_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level5Container/Level5Button" to="." method="_on_level5_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level6Container/Level6Button" to="." method="_on_level6_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level7Container/Level7Button" to="." method="_on_level7_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level8Container/Level8Button" to="." method="_on_level8_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level9Container/Level9Button" to="." method="_on_level9_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level10Container/Level10Button" to="." method="_on_level10_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Level11Container/Level11Button" to="." method="_on_level11_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
